Fixed all warnings in project.